# openquant

./: .dockerignore  .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
configs/: data_sources.yaml  features.yaml  model_config.yaml
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker
docs/: LOAD_TESTING.md
scripts/: run_ingestion.py  setup_db.py  train_model.py
src/openquant/: __init__.py
src/openquant/api/: __init__.py  main.py  schemas.py
src/openquant/api/routers/: data.py  features.py  health.py  models.py
src/openquant/config/: settings.py
src/openquant/dashboard/: __init__.py  app.py
src/openquant/features/: __init__.py  cache.py  engine.py  registry.py
src/openquant/ingestion/: __init__.py  providers.py  scheduler.py  storage.py
src/openquant/models/: __init__.py  predictor.py  registry.py  trainer.py
src/openquant/monitoring/: __init__.py  drift.py
src/openquant/utils/: logging.py  time.py
tests/: conftest.py  test_api.py  test_features.py  test_ingestion.py  test_models.py
