[project]
name = "openquant"
version = "0.1.0"
description = "Open-source MLOps platform for financial time-series"
authors = [{name = "OpenQuant Contributors"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Data & Storage
    "duckdb>=0.9.0",
    "redis>=5.0.0",
    "yfinance>=0.2.32",
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    # ML & Training
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.9.0",
    # API & Web
    "fastapi[all]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    # Config & Utils
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "loguru>=0.7.2",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "fakeredis>=2.20.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.1.0",
    "types-pyyaml>=6.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["yfinance", "pandas_ta", "mlflow.", "streamlit."]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src/openquant --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
